# premise_gwp

./: AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
conda/: meta.yaml
premise_gwp/: __init__.py  biosphere.py  version.py
premise_gwp/data/: LCIA_Implementation_3.8.xlsx  lcia_gtp_100a.xlsx  lcia_gtp_100a_w_bio.xlsx  lcia_gtp_20a.xlsx  lcia_gtp_20a_w_bio.xlsx  lcia_gwp2021_100a.xlsx  lcia_gwp2021_100a_w_bio.xlsx  lcia_gwp2021_20a.xlsx  lcia_gwp2021_20a_w_bio.xlsx  lcia_gwp_100a.xlsx  lcia_gwp_100a_w_bio.xlsx  lcia_gwp_20a.xlsx  lcia_gwp_20a_w_bio.xlsx  mapping_ei310.yaml  mapping_ei311.yaml
tests/: test_biosphere.py  test_implementation.py
